--- a/app/globals.css
+++ b/app/globals.css
@@ -25,6 +25,10 @@
 		@apply absolute -top-2 -right-1 flex items-center justify-center size-5 bg-primary rounded-full;
 	}
 
+	.cart-menu-badge {
+		@apply absolute top-2 -right-1 flex items-center justify-center size-5 bg-primary rounded-full;
+	}
+
 	.cart-item {
 		@apply flex flex-row items-end justify-between mb-4 bg-white rounded-xl p-3 shadow-md shadow-dark-100/10;
 	}
